--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
-    <head>A fantastical adventure</head>
+    <title>A fantastical adventure</title>
   </head>
   <body>
     <div class="container">
