Add button that lets users switch to light on dark background and back.

--- a/survey.html
+++ b/survey.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <div class="container">
+        <div class="dark">
+        <button type="button" class="btn btn-primary" id="darkness">Darkness?</button>
+        </div>
+        <div class="light">
+        <button type="button" class="btn btn-warning" id="lightness">Show me the light!</button>
+        </div>
       <h1>What is your favorite...</h1>
       <div id="blanks">
         <form>
